src/objects/Apttus_Revenue2__BatchJob__c.object
<CustomObject>
    <description>Holds batch jobs</description>
    <fields>
        <fullName>Apttus_Revenue2__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Batch Jobs</relationshipLabel>
        <relationshipName>Batch_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__EndTime__c</fullName>
        <description>Job end time</description>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__JobId__c</fullName>
        <description>Batch job id</description>
        <label>JobId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__JobType__c</fullName>
        <description>The batch job type</description>
        <label>JobType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Actual Revenue</fullName>
                </value>
                <value>
                    <fullName>Generate Forecast Revenue</fullName>
                </value>
                <value>
                    <fullName>Rollback Actual Revenue</fullName>
                </value>
                <value>
                    <fullName>Rollback Forecast Revenue</fullName>
                </value>
                <value>
                    <fullName>Update Forecast</fullName>
                </value>
                <value>
                    <fullName>Update Budget</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Period_Date__c</fullName>
        <description>Revenue period date</description>
        <label>Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__StartTime__c</fullName>
        <description>Job start time</description>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Revenue2__Status__c</fullName>
        <description>Batch job status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BatchJob</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>BatchJob Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>